--- a/styles/style.scss
+++ b/styles/style.scss
@@ -62,9 +62,9 @@ body {
     }
 }
 
-@media screen and (max-width: 31.25rem) {
+@media screen and (max-width: 31.25em) {
     .container {
-        width: 25rem;
+        width: 25em;
     }
 
 }
